--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -81,6 +81,7 @@
   - python3-pip
   - python3-venv
   - ssh
+  - tmux
   - tree
   - unzip
   - vim-gtk3
@@ -99,4 +100,6 @@
   - [source ./setup-scripts/install-docker.sh, Installing docker]
   - [source ./setup-scripts/install-nvim.sh, Installing nvim]
   - [source ./setup-scripts/install-mssql-odbc-cli.sh, Installing msodbcsql18 and mssql-tools18]
+  - [~/.tmux/plugins/tpm/bin/install_plugins, Installing tpm plugins]
+  - [~/.tmux/plugins/tpm/bin/update_plugins all, Updating tpm plugins]
   - [~/.local/bin/nvim --headless "+Lazy! install" +qa, Installing Lazy plugins]
