--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -55,6 +55,10 @@
       reinstall: false
       batch_mode: true
 
+- shell:
+  - [sudo apt remove vim, Removing vim]
+  - [sudo apt autoremove, apt autoremove]
+
 - apt:
   - apt-transport-https
   - autoconf
@@ -82,6 +86,7 @@
   - tmux
   - tree
   - unzip
+  - vim-gtk3
   - wget
   - zip
   - zsh
