feat(tmux): add repeat capability to select-pane and swap-window

--- a/config-files/tmux.conf
+++ b/config-files/tmux.conf
@@ -47,15 +47,15 @@ set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # Pane navigation
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-bind-key / select-pane -l
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
+bind-key -r / select-pane -l
 
 # Swap windows
-bind-key u swap-window -d -t -1
-bind-key ç swap-window -d -t +1
+bind-key -r u swap-window -d -t -1
+bind-key -r ç swap-window -d -t +1
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
