simplify tmux.conf removing tmux plugins

--- a/config-files/tmux.conf
+++ b/config-files/tmux.conf
@@ -5,17 +5,16 @@ bind-key C-s send-prefix
 
 # Source configuration
 unbind-key r
-bind-key r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
 # Mouse support
-setw -g mouse on
+set -g mouse on
 
 # Shell
 set-option -g default-shell $SHELL
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
-set -g pane-base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 
@@ -23,7 +22,16 @@ set -g renumber-windows on
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v   send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y   send-keys -X copy-pipe-and-cancel "clip.exe"
+if-shell 'command -v clip.exe >/dev/null' \
+  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "clip.exe"'
+if-shell 'command -v wl-copy >/dev/null' \
+  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"'
+if-shell 'command -v xclip >/dev/null' \
+  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"'
+if-shell 'command -v xsel >/dev/null' \
+  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard --input"'
+if-shell 'command -v pbcopy >/dev/null' \
+  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"'
 
 # Open panes in current directory
 unbind-key %
@@ -38,13 +46,20 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 
 # Set true color
-set -sa terminal-overrides ",xterm*:Tc"
 set -g default-terminal "tmux-256color"
+set -sa terminal-overrides ",xterm*:Tc"
 
 # undercurl support
 set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 # support colors for undercurl
 set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+# support cursor shape
+set -sa terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+
+set -s focus-events on
+
+# safer escape time for neovim
+set -sg escape-time 10
 
 # Pane navigation
 bind-key -r h select-pane -L
@@ -57,33 +72,21 @@ bind-key -r / select-pane -l
 bind-key -r u swap-window -d -t -1
 bind-key -r ç swap-window -d -t +1
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'dracula/tmux'
-
 # Status bar
+%hidden default_bg=#E6E3DD
+%hidden prefix_bg=#CFCBC4
+%hidden mode_bg=#E8C5E2
+%hidden message_bg=#CAE1E3
+%hidden fg_dark=#111111
+
+set -g status-style "fg=${fg_dark},bg=#{?client_prefix,${prefix_bg},#{?pane_in_mode,${mode_bg},${default_bg}}}"
+set -g message-style "bg=${message_bg},fg=${fg_dark}"
 set -g status-position top
-set -g @dracula-show-left-icon "#S"
-set -g @dracula-plugins 'cpu-usage ram-usage'
-set -g @dracula-show-powerline true
-set -g @dracula-show-edge-icons false
-set -g @dracula-transparent-powerline-bg false
-set -g @dracula-show-flags false
-set -g @dracula-refresh-rate 2
-set -g @dracula-show-empty-plugins false
-set -g @dracula-border-contrast true
-set -g @dracula-show-left-sep 
-set -g @dracula-show-right-sep 
-set -g @dracula-inverse-divider 
+set -g window-status-current-style "bold"
 
-set -g @dracula-colors "
-green='#f0afbd'
-"
+ram_total="#(free -h | awk 'NR==2 {print $2}' | sed 's/i/B/')"
+ram_usage="#(free -h | awk 'NR==2 {print $3}' | sed 's/i/B/')"
+cpu_usage="#(top -bn 2 -d 0.01 | rg 'Cpu' | tail -n 1 | awk '{printf \"%04.2f%%\",  $2 + $4 + $6}')"
 
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
-set -s focus-events on
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+set -g status-right "CPU=$cpu_usage RAM=$ram_usage/$ram_total"
+set -g status-interval 5
