--- a/config-files/tmux.conf
+++ b/config-files/tmux.conf
@@ -84,9 +84,9 @@ set -g message-style "bg=${message_bg},fg=${fg_dark}"
 set -g status-position top
 set -g window-status-current-style "bold"
 
-ram_total="#(free -h | awk 'NR==2 {print $2}' | sed 's/i/B/')"
-ram_usage="#(free -h | awk 'NR==2 {print $3}' | sed 's/i/B/')"
-cpu_usage="#(top -bn 2 -d 0.01 | rg 'Cpu' | tail -n 1 | awk '{printf \"%04.2f%%\",  $2 + $4 + $6}')"
+%hidden ram_total="#(free -h | awk 'NR==2 {print $2}' | sed 's/i/B/')"
+%hidden ram_usage="#(free -h | awk 'NR==2 {print $3}' | sed 's/i/B/')"
+%hidden cpu_usage="#(top -bn 2 -d 0.01 | rg 'Cpu' | tail -n 1 | awk '{printf \"%04.2f%%\",  $2 + $4 + $6}')"
 
-set -g status-right "CPU=$cpu_usage RAM=$ram_usage/$ram_total"
+set -g status-right "$cpu_usage | $ram_usage/$ram_total"
 set -g status-interval 5
