--- a/config-files/config/tmux/tmux.conf
+++ b/config-files/config/tmux/tmux.conf
@@ -73,16 +73,17 @@ bind-key -r u swap-window -d -t -1
 bind-key -r ç swap-window -d -t +1
 
 # Status bar
-%hidden default_bg=#E6E3DD
-%hidden prefix_bg=#CFCBC4
+%hidden default_bg=#F0EFEA
+%hidden prefix_bg=#E6E3DD
 %hidden mode_bg=#E8C5E2
 %hidden message_bg=#CAE1E3
-%hidden fg_dark=#111111
+%hidden default_fg=#111111
+%hidden current_fg=#5783e0
 
-set -g status-style "fg=${fg_dark},bg=#{?client_prefix,${prefix_bg},#{?pane_in_mode,${mode_bg},${default_bg}}}"
-set -g message-style "bg=${message_bg},fg=${fg_dark}"
+set -g status-style "fg=${default_fg},bg=#{?client_prefix,${prefix_bg},#{?pane_in_mode,${mode_bg},${default_bg}}}"
+set -g message-style "bg=${message_bg},fg=${default_fg}"
 set -g status-position top
-set -g window-status-current-style "bold"
+set -g window-status-current-style "fg=${current_fg},bold"
 
 %hidden ram_total="#(free -h | awk 'NR==2 {print $2}' | sed 's/i/B/')"
 %hidden ram_usage="#(free -h | awk 'NR==2 {print $3}' | sed 's/i/B/')"
