feat(tmux): add light and dark theme variants

--- a/config-files/config/tmux/tmux.conf
+++ b/config-files/config/tmux/tmux.conf
@@ -5,7 +5,7 @@ bind-key C-s send-prefix
 
 # Source configuration
 unbind-key r
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
 
 # Mouse support
 set -g mouse on
@@ -73,7 +73,17 @@ bind-key -r u swap-window -d -t -1
 bind-key -r ç swap-window -d -t +1
 
 # Status bar
-%hidden default_bg=#F0EFEA
+
+# tmux_theme=dark
+# %hidden default_bg=#211f17
+# %hidden prefix_bg=#45475a
+# %hidden mode_bg=#cba6f7
+# %hidden message_bg=#a11650
+# %hidden default_fg=#ebeeee
+# %hidden current_fg=#8ebce1
+
+tmux_theme=light
+%hidden default_bg=#f0efea
 %hidden prefix_bg=#E6E3DD
 %hidden mode_bg=#E8C5E2
 %hidden message_bg=#CAE1E3
