tmux: set status-left-length 40

--- a/config-files/config/tmux/tmux.conf
+++ b/config-files/config/tmux/tmux.conf
@@ -99,5 +99,6 @@ set -g window-status-current-style "fg=${current_fg},bold"
 %hidden ram_usage="#(free -h | awk 'NR==2 {print $3}' | sed 's/i/B/')"
 %hidden cpu_usage="#(top -bn 2 -d 0.01 | rg 'Cpu' | tail -n 1 | awk '{printf \"%04.2f%%\",  $2 + $4 + $6}')"
 
+set -g status-left-length 40
 set -g status-right "$cpu_usage | $ram_usage/$ram_total"
 set -g status-interval 5
