install.conf: get windows username when creating ~/win symbolic link

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,7 @@
   - [git submodule update --init --recursive, Installing submodules]
   - [sudo chown root:root "$(pwd)"/config-files/etc/wsl.conf, Making root owner of wsl.conf]
   - [sudo ln -f "$(pwd)"/config-files/etc/wsl.conf /etc/wsl.conf, Linking wsl.conf]
+  - [ln -fs /mnt/c/Users/$(/mnt/c/Program\ Files/PowerShell/7/pwsh.exe -NoProfile -Command 'Write-Host $env:USERNAME -NoNewline') ~/win, Creating windows symbolic link]
 
 - defaults:
     link:
@@ -24,7 +25,6 @@
     ~/.config/eza: ./config-files/config/eza
     ~/.config/tmux: ./config-files/config/tmux/
     ~/.my: ./config-files/my
-    ~/win: /mnt/c/Users/wcs
     ~/data:
       path: /mnt/wsl/data
       ignore-missing: true
