--- a/config-files/config/tmux/tmux.conf
+++ b/config-files/config/tmux/tmux.conf
@@ -62,13 +62,17 @@ set -s focus-events on
 set -sg escape-time 10
 
 # Pane navigation
-bind-key -r h select-pane -L
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
-bind-key -r l select-pane -R
-bind-key -r / select-pane -l
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind-key / select-pane -l
 
-# Swap windows
+# Window navigation
+unbind-key n
+unbind-key p
+bind-key -r n next-window
+bind-key -r p previous-window
 bind-key -r u swap-window -d -t -1
 bind-key -r ç swap-window -d -t +1
 
