tmux: add keybind to switch to previous session

--- a/config-files/config/tmux/tmux.conf
+++ b/config-files/config/tmux/tmux.conf
@@ -76,6 +76,9 @@ bind-key -r p previous-window
 bind-key -r u swap-window -d -t -1
 bind-key -r ç swap-window -d -t +1
 
+# Session navigation
+bind -n M-0  switch-client -p
+
 # Status bar
 
 # tmux_theme=dark
