tmux: position status in the bottom

--- a/config-files/config/tmux/tmux.conf
+++ b/config-files/config/tmux/tmux.conf
@@ -99,7 +99,7 @@ tmux_theme=light
 
 set -g status-style "fg=${default_fg},bg=#{?client_prefix,${prefix_bg},#{?pane_in_mode,${mode_bg},${default_bg}}}"
 set -g message-style "bg=${message_bg},fg=${default_fg}"
-set -g status-position top
+set -g status-position bottom
 set -g window-status-current-style "fg=${current_fg},bold"
 
 %hidden ram_total="#(free -h | awk 'NR==2 {print $2}' | sed 's/i/B/')"
