tmux: change status bar light bg color

--- a/config-files/config/tmux/tmux.conf
+++ b/config-files/config/tmux/tmux.conf
@@ -90,7 +90,7 @@ bind -n M-0  switch-client -p
 # %hidden current_fg=#8ebce1
 
 tmux_theme=light
-%hidden default_bg=#f0efea
+%hidden default_bg=#e4e6e6
 %hidden prefix_bg=#E6E3DD
 %hidden mode_bg=#E8C5E2
 %hidden message_bg=#CAE1E3
