--- a/config-files/config/tmux/tmux.conf
+++ b/config-files/config/tmux/tmux.conf
@@ -45,6 +45,9 @@ bind '"' split-window -v -c "#{pane_current_path}"
 # Open windows in current directory
 bind-key c new-window -c "#{pane_current_path}"
 
+unbind-key f
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+
 # Set true color
 set -g default-terminal "tmux-256color"
 set -sa terminal-overrides ",xterm*:Tc"
